<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/field_cadStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/Cadastro_de_Turma" />

    <TextView
        android:id="@+id/textView_curso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:text="@string/Cursos"
         />

    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/n_o_selecionado" >
    </Spinner>

    <EditText
        android:id="@+id/editText_cod_turma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/cod_turma"
        android:autofillHints="turma" />

    <EditText
        android:id="@+id/editText_ano_turma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/year"
        android:autofillHints="ano" />

    <EditText
        android:id="@+id/editText_disciplina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/disciplina"
        android:autofillHints="disciplina" />

    <TextView
        android:id="@+id/textView_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:text="@string/Students"     />


    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adicionar"
        android:layout_marginBottom="20dp"
        android:onClick="cadastrar"/>

</LinearLayout>