<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/Students" />

    <TextView
        android:id="@+id/enrolled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:text="@string/Cadastrados" />

    <ListView
        android:id="@+id/listView_student"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp" >
    </ListView>

    <TextView
        android:id="@+id/textView_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/curso" />

    <Spinner
        android:id="@+id/spinner_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_modalidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/modalidade" />

    <Spinner
        android:id="@+id/spinner_modalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textView_enrollId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/matricula" />

    <EditText
        android:id="@+id/editText_enrollId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/matricula"
        android:autofillHints="matricula" />

    <TextView
        android:id="@+id/textView_NameStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/nameStudent"/>

    <EditText
        android:id="@+id/editText_name_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textAutoComplete"
        android:autofillHints="aluno" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adicionar"
        />

</LinearLayout>