<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/field_cadCursos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:text="@string/Cursos" />

    <TextView
        android:id="@+id/field_Cadastrados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:text="@string/Cadastrados"
        android:layout_marginStart="20dp" />

       <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"/>

    <TextView
        android:id="@+id/field_cadCurso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:text="@string/novo_curso"
        android:textSize="20sp"
        android:layout_marginStart="20dp" />

    <EditText
        android:id="@+id/cadCurso"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name_course"
        android:autofillHints="" />

    <TextView
        android:id="@+id/field_cadModal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:layout_gravity="start"
        android:text="@string/modalidade"
        android:layout_marginStart="20dp" />

    <Spinner
        android:id="@+id/modalidades"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:autofillHints="@string/n_o_selecionado"
        android:prompt="@string/n_o_selecionado" >
    </Spinner>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adicionar"
        android:layout_marginBottom="20dp"
        android:onClick="cadCurso"/>

</LinearLayout>