<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@mipmap/ic_launcher_estudir"
        android:contentDescription="@string/desc_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
         />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login"
         />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/white"
        android:inputType="textPassword"
        android:hint="@string/senha"
         />

    <Button
        android:id="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:onClick="loginApp"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>